--- a/roles/gateway_common/tasks/initial-update-ssgconfig-password.yml
+++ b/roles/gateway_common/tasks/initial-update-ssgconfig-password.yml
@@ -2,7 +2,7 @@
 - name: Check if user password is expired # noqa 305 - no alternative to shell
   no_log: true # don't log decrypted passwords in responses
   shell:
-    cmd: sshpass -p '{{ gateway_default_password }}' ssh {{ ansible_ssh_extra_args }} {{ ansible_user }}@{{ dest }} "chage --list {{ ansible_user }}"
+    cmd: sshpass -p '{{ gateway_default_password }}' ssh {{ ansible_ssh_extra_args }} {{ ansible_user }}@{{ ansible_host }} "chage --list {{ ansible_user }}"
   register: expired
   changed_when: false
   failed_when: "'Connection refused' in expired.stderr"
@@ -11,7 +11,7 @@
   when: expired.rc != 0 and 'Your password has expired' in expired.stderr
   no_log: true # don't log decrypted passwords in responses
   expect:
-    command: sshpass -p '{{ gateway_default_password }}' ssh {{ ansible_ssh_extra_args }} {{ ansible_user }}@{{ dest }}
+    command: sshpass -p '{{ gateway_default_password }}' ssh {{ ansible_ssh_extra_args }} {{ ansible_user }}@{{ ansible_host }}
     timeout: "{{ gateway_ssh_timeout }}"
     responses:
       "'s password:": "{{ gateway_default_password }}"
