--- a/playbooks/gateway-restore-basic-backup.yml
+++ b/playbooks/gateway-restore-basic-backup.yml
@@ -1,8 +1,8 @@
 ---
-- hosts: gateway_dest
+- name: Run gateway restore backup against provided list of gateways
+  hosts: gateway
   gather_facts: no
   become: true
-
   tasks:
   - include_role:
       name: gateway_basic_restore_backup
