--- a/roles/gateway_common/tasks/initial-update-root-password.yml
+++ b/roles/gateway_common/tasks/initial-update-root-password.yml
@@ -2,7 +2,7 @@
 - name: Update expired root user password
   no_log: true # don't log decrypted passwords in responses
   expect:
-    command: sshpass -p '{{ gateway_ssgconfig_password }}' ssh {{ ansible_ssh_extra_args }} {{ ansible_user }}@{{ dest }}
+    command: sshpass -p '{{ gateway_ssgconfig_password }}' ssh {{ ansible_ssh_extra_args }} {{ ansible_user }}@{{ ansible_host }}
     timeout: "{{ gateway_ssh_timeout }}"
     responses:
       "'s password:": "{{ gateway_ssgconfig_password }}"
