--- a/roles/gateway_preupgrade_analyzer/tasks/mysql8_compatibility_checker.yml
+++ b/roles/gateway_preupgrade_analyzer/tasks/mysql8_compatibility_checker.yml
@@ -1,11 +1,11 @@
 ---
 # This task report mysql8 compatibility checker.
 # Uncomment
-#- name: Grant gateway all privileges to database
-#  shell:
-#    cmd: mysql -u{{ database_admin_user }}  -p{{ database_admin_pass }} -e "GRANT ALL PRIVILEGES ON *.* TO '{{ database_user }}'@'%'; flush privileges;"
-#  no_log: true
-#  when: inventory_hostname in groups['gateway_primary_db'] or inventory_hostname in groups['gateway_failover_db']
+- name: Grant gateway all privileges to database
+  shell:
+   cmd: mysql -u{{ database_admin_user }}  -p{{ database_admin_pass }} -e "GRANT ALL PRIVILEGES ON *.* TO '{{ database_user }}'@'%'; flush privileges;"
+  no_log: true
+  when: inventory_hostname in groups['gateway_mysql']
 
 - name: Run Mysql8 Compatibility Checker
   shell:
@@ -14,4 +14,4 @@
   ignore_errors: True
   register: report_mysql8_compatibility_check
   delegate_to: localhost
-  when: inventory_hostname in groups['gateway_primary_db'] or inventory_hostname in groups['gateway_failover_db']
+  when: inventory_hostname in groups['gateway_mysql']
