--- a/roles/gateway_export_database/tasks/main.yml
+++ b/roles/gateway_export_database/tasks/main.yml
@@ -1,4 +1,5 @@
-- name: Create database dump backup folder on controller. #Cannot be created by fetch module below due to limitation of fetch module. Must be explicitly created.
+#Cannot be created by fetch module below due to limitation of fetch module. Must be explicitly created.
+- name: Create database dump backup folder on controller.
   local_action:
     module: file
     path: "{{ controller_dir_db_backup_location }}"
@@ -8,16 +9,16 @@
 
 - name: create remote temp directory for output files
   file:
-    path: "{{remote_db_temp_dir}}"
+    path: "{{ remote_db_temp_dir }}"
     state: directory
 
 
-- name: Dump gateway source database
+- name: Dump gateway source database # noqa 305 - no alternative to shell command
   no_log: true # don't log decrypted passwords in responses
   shell: 
     cmd: mysqldump {{ ssgdb_name }} --routines -u{{ ssgdb_user}}  -p{{ ssgdb_userpwd }} > {{remote_db_temp_dir}}/ssg.sql
 
-- name: remove string from gateway DB dump to comply with MySQL8
+- name: remove string from gateway DB dump to comply with MySQL8 # noqa 305 - no alternative to shell command
   shell: 
     cmd: sed -i 's/NO_AUTO_CREATE_USER,//g' {{remote_db_temp_dir}}/ssg.sql
   args:
@@ -27,14 +28,14 @@
   when: otkdb_name is defined
   block:
 
-    - name: Dump otk source database
+    - name: Dump otk source database # noqa 305 - no alternative to shell command
       no_log: true # don't log decrypted passwords in responses
-      shell: 
+      shell:
         cmd: mysqldump {{otkdb_name}} --routines -u{{ ssgdb_adminuser}}  -p{{ ssgdb_adminpwd }} > {{remote_db_temp_dir}}/otk.sql
 
-    - name: remove string from otk DB dump to comply with MySQL8
-      shell: 
-        cmd: sed -i 's/NO_AUTO_CREATE_USER,//g' {{remote_db_temp_dir}}/otk.sql 
+    - name: remove string from otk DB dump to comply with MySQL8 # noqa 305 - no alternative to shell command
+      shell:
+        cmd: sed -i 's/NO_AUTO_CREATE_USER,//g' {{ remote_db_temp_dir }}/otk.sql
       args:
         warn: no
 
@@ -44,7 +45,7 @@
     dest: '{{ db_dump_zip_file }}.zip'
     format: zip
 
-- name: copy over the zip file to controller 
+- name: copy over the zip file to controller
   fetch:
     src: '{{ db_dump_zip_file }}.zip'
     dest: '{{ controller_dir_db_backup_location }}'
