--- a/roles/gateway_import_database/tasks/main.yml
+++ b/roles/gateway_import_database/tasks/main.yml
@@ -7,23 +7,23 @@
     src: '{{ controller_dir_db_backup_location }}/{{ source }}{{ db_dump_zip_file }}.zip'
     dest: '{{ remote_db_temp_dir }}'
 
-- name: Delete gateway database 
+- name: Delete gateway database # noqa 305 - no alternative to shell command
   no_log: true # don't log decrypted passwords in responses
   shell:
     cmd: mysqladmin -u {{ ssgdb_user }} -p{{ ssgdb_userpwd }} drop {{ ssgdb_name }} -f
   failed_when: false
 
-- name: create gateway database
+- name: create gateway database # noqa 305 - no alternative to shell command
   no_log: true # don't log decrypted passwords in responses
   shell:
     cmd: mysqladmin -u {{ ssgdb_user }} -p{{ ssgdb_userpwd }} create {{ ssgdb_name }}
 
-- name: import gateway database from source gateway 
+- name: import gateway database from source gateway # noqa 305 - no alternative to shell command
   no_log: true # don't log decrypted passwords in responses
   shell:
     cmd: mysql  -u {{ ssgdb_user }} -p{{ ssgdb_userpwd }} {{ ssgdb_name }} < {{remote_db_temp_dir}}/ssg.sql
 
-- name: clean up cluster_info table
+- name: clean up cluster_info table # noqa 305 - no alternative to shell command
   no_log: true
   shell:
     cmd: mysql  -u {{ ssgdb_user }} -p{{ ssgdb_userpwd }} -e 'truncate table ssg.cluster_info'
@@ -31,33 +31,33 @@
 - name: Import otk source database
   when: otkdb_name is defined
   block:
-    - name: create otk user if not exists
+    - name: create otk user if not exists # noqa 305 - no alternative to shell command
       no_log: true # don't log decrypted passwords in responses
       shell:
         cmd: mysql -u {{ ssgdb_adminuser }} -p{{ ssgdb_adminpwd }} -e "{{ command_mysql_create_otkuser }}"
 
-    - name: grant otk user privileges
+    - name: grant otk user privileges # noqa 305 - no alternative to shell command
       no_log: true # don't log decrypted passwords in responses
       shell:
         cmd: mysql -u {{ ssgdb_adminuser }} -p{{ ssgdb_adminpwd }} -e "{{ command_mysql_grant_otkuser_privileges }}"
 
-    - name: delete otk database
+    - name: delete otk database # noqa 305 - no alternative to shell command
       no_log: true # don't log decrypted passwords in responses
-      shell: 
-        cmd: mysqladmin  -u {{ ssgdb_adminuser }} -p{{ ssgdb_adminpwd }} drop {{otkdb_name}} -f
+      shell:
+        cmd: mysqladmin  -u {{ ssgdb_adminuser }} -p{{ ssgdb_adminpwd }} drop {{ otkdb_name }} -f
       failed_when: false
 
-    - name: create otk database 
+    - name: create otk database
       no_log: true # don't log decrypted passwords in responses
       shell:
-        cmd: mysqladmin -u {{ ssgdb_adminuser }} -p{{ ssgdb_adminpwd }} create {{otkdb_name}}
+        cmd: mysqladmin -u {{ ssgdb_adminuser }} -p{{ ssgdb_adminpwd }} create {{ otkdb_name }}
 
-    - name: import otk database 
+    - name: import otk database
       no_log: true # don't log decrypted passwords in responses
       shell:
-        cmd: mysql -u {{ ssgdb_adminuser }} -p{{ ssgdb_adminpwd }} {{otkdb_name}} < {{remote_db_temp_dir}}/otk.sql
+        cmd: mysql -u {{ ssgdb_adminuser }} -p{{ ssgdb_adminpwd }} {{ otkdb_name }} < {{ remote_db_temp_dir }}/otk.sql
 
 - name: clean up remote temp directory
   file:
-    path: "{{remote_db_temp_dir}}"
+    path: "{{ remote_db_temp_dir }}"
     state: absent
