--- a/roles/gateway_basic_restore_backup/tasks/main.yml
+++ b/roles/gateway_basic_restore_backup/tasks/main.yml
@@ -24,7 +24,7 @@
   
 - name: Set the backup filename to a fact.
   set_fact:
-    fact_backup_file: "ansible_basic_ssgbackup_{{ hostvars[inventory_hostname].upgrade_source }}.zip"    
+    fact_backup_file: "ansible_basic_ssgbackup_{{ hostvars[inventory_hostname].upgrade_source }}.zip"
   
 - name: Ensure the ssg service is not running.
   systemd:
@@ -35,7 +35,7 @@
   copy:
     src: "{{ controller_dir_backup_location }}/ansible_basic_ssgbackup_{{ hostvars[inventory_hostname].upgrade_source }}.zip"
     dest: /opt/SecureSpan/Gateway/config/backup/
-    
+
 - name: Ensure node.properties exists so ssgrestore will succeed on new appliances with no node.properties.
         # Create empty node.properties if it doesn't exist otherwise ssgrestore will fail.
   copy:
@@ -45,20 +45,18 @@
     group: gateway
     owner: layer7
     mode: 0664
-    
 
 - name: Ensure Gateway pid does not exist anymore after stopping Gateway service.
-  shell: pgrep -f "Gateway.jar"
+  shell: pgrep -f "Gateway.jar" # noqa 305 - no alternative to shell
   register: gateway_pid
-  failed_when: 'gateway_pid.rc >= 2 or gateway_pid.stdout != ""'
+  failed_when: 'gateway_pid.rc >= 2 or gateway_pid.stdout'
   changed_when: no
-  until: gateway_pid.stdout == ""
+  until: not gateway_pid.stdout
   retries: 3
   delay: 10
- 
-    
+
 - name: Execute ssgrestore of configuration and assertions.
-  command: /opt/SecureSpan/Gateway/config/backup/ssgrestore.sh -image {{ fact_backup_file }} {{ ssgrestore_parameters }}  
+  command: /opt/SecureSpan/Gateway/config/backup/ssgrestore.sh -image {{ fact_backup_file }} {{ ssgrestore_parameters }}
   
 - name: Ensure /tmp/ssgrestore exists to restore OS configuration.
   file:
@@ -83,21 +81,21 @@
     src: "{{ temp_folder }}/os/etc/sysconfig"
     dest: /etc/
     remote_src: true
-  when: restore_os_config.sysconfig_folder == True       
+  when: restore_os_config.sysconfig_folder == True
       
 - name: Restore /etc/snmp folder.
   copy:
     src: "{{ temp_folder }}/os/etc/snmp"
     dest: /etc/
     remote_src: true
-  when: restore_os_config.snmp_folder == True 
+  when: restore_os_config.snmp_folder == True
   
 - name: Restore /etc/ntp folder.
   copy:
     src: "{{ temp_folder }}/os/etc/ntp"
     dest: /etc/
     remote_src: true
-  when: restore_os_config.ntp_folder == True   
+  when: restore_os_config.ntp_folder == True
 
 - name: Restore /etc/hosts file.
   copy:
