--- a/roles/gateway_import_database/tasks/upgrade_gateway_database_schema.yml
+++ b/roles/gateway_import_database/tasks/upgrade_gateway_database_schema.yml
@@ -4,7 +4,9 @@
 - name: upgrading Gateway Database Schema after import database
   no_log: true # don't log decrypted passwords in responses
   expect:
-    command: sshpass -p '{{ ansible_password }}' ssh ssgconfig@{{inventory_hostname}} 'sudo -u layer7 /opt/SecureSpan/Appliance/libexec/ssgconfig_launch -databaseUgrade'
+    command: >
+      sshpass -p '{{ ansible_password }}' ssh ssgconfig@{{ inventory_hostname }}
+      'sudo -u layer7 /opt/SecureSpan/Appliance/libexec/ssgconfig_launch -databaseUgrade'
     responses:
       "Perform upgrade?": "y"
       "Enter Administrative Database Username": "{{ ssgdb_adminuser }}"
