--- a/roles/gateway_preupgrade_analyzer/tasks/assertions.yml
+++ b/roles/gateway_preupgrade_analyzer/tasks/assertions.yml
@@ -16,11 +16,13 @@
 
 - name: Retrieve Server Module Files from database ssg, table server_module_file
   block:
-    - name: Retrieve Server Module Assertions.
+    - name: Retrieve Server Module Assertions. # noqa 305 - no alternative to shell module
       shell:
         cmd: mysql -u{{ database_admin_user}}  -p{{ database_admin_pass }} -N {{ database_name }} -e "select properties from server_module_file"
       register: query_server_module_files
       check_mode: no
       changed_when: False
-    - set_fact: report_server_module_files="{{ query_server_module_files.stdout | regex_findall('([a-zA-Z0-9.-]+(?:.sjar|.saar))') }}"
+    - name: Save list of files to fact
+      set_fact: 
+        report_server_module_files: "{{ query_server_module_files.stdout | regex_findall('([a-zA-Z0-9.-]+(?:.sjar|.saar))') }}"
   when: inventory_hostname in groups['gateway_primary_db'] or inventory_hostname in groups['gateway_failover_db']
