--- a/roles/gateway_replicate_database/tasks/add_slave_user.yml
+++ b/roles/gateway_replicate_database/tasks/add_slave_user.yml
@@ -1,9 +1,11 @@
 - name: Run add_slave_user.sh on {{ master_node }}
   no_log: true # don't log decrypted passwords in responses
   expect:
-    command: sshpass -p '{{ hostvars[master_node].ansible_ssh_pass }}' ssh {{ ansible_ssh_extra_args }} {{ hostvars[master_node].ansible_user }}@{{master_node}} {{command_add_slave_user}}
+    command: >
+      sshpass -p '{{ hostvars[master_node].ansible_ssh_pass }}' ssh {{ ansible_ssh_extra_args }}
+      {{ hostvars[master_node].ansible_user }}@{{ master_node }} {{ command_add_slave_user }}
     responses:
-      "Enter hostname or IP for the SLAVE:": "{{slave_node}}"
+      "Enter hostname or IP for the SLAVE:": "{{ slave_node }}"
       "Enter replication user:": "{{ hostvars[slave_node].database_repl_user }}"
       "Enter replication password:": "{{ hostvars[slave_node].database_repl_pass }}"
       "Enter MySQL root user:": "{{ hostvars[slave_node].database_admin_user }}"
