--- a/roles/gateway_export_database/tasks/main.yml
+++ b/roles/gateway_export_database/tasks/main.yml
@@ -15,14 +15,18 @@
 
 - name: Dump gateway source database # noqa 305 - no alternative to shell command
   no_log: true # don't log decrypted passwords in responses
-  shell: 
-    cmd: mysqldump {{ ssgdb_name }} --routines -u{{ ssgdb_user}}  -p{{ ssgdb_userpwd }} > {{remote_db_temp_dir}}/ssg.sql
+  shell:
+    cmd: mysqldump {{ ssgdb_name }} --routines -u{{ ssgdb_user }}  -p{{ ssgdb_userpwd }} > {{ remote_db_temp_dir }}/ssg.sql
+  register: status
+  changed_when: status.rc == 0
 
 - name: remove string from gateway DB dump to comply with MySQL8 # noqa 305 - no alternative to shell command
-  shell: 
-    cmd: sed -i 's/NO_AUTO_CREATE_USER,//g' {{remote_db_temp_dir}}/ssg.sql
+  shell:
+    cmd: sed -i 's/NO_AUTO_CREATE_USER,//g' {{ remote_db_temp_dir }}/ssg.sql
   args:
     warn: no
+  register: status
+  changed_when: status.rc == 0
 
 - name: Dump otk source database
   when: otkdb_name is defined
@@ -31,7 +35,7 @@
     - name: Dump otk source database # noqa 305 - no alternative to shell command
       no_log: true # don't log decrypted passwords in responses
       shell:
-        cmd: mysqldump {{otkdb_name}} --routines -u{{ ssgdb_adminuser}}  -p{{ ssgdb_adminpwd }} > {{remote_db_temp_dir}}/otk.sql
+        cmd: mysqldump {{ otkdb_name }} --routines -u{{ ssgdb_adminuser }}  -p{{ ssgdb_adminpwd }} > {{ remote_db_temp_dir }}/otk.sql
 
     - name: remove string from otk DB dump to comply with MySQL8 # noqa 305 - no alternative to shell command
       shell:
