--- a/roles/gateway_configure_hsm_luna/tasks/check_valid_input.yml
+++ b/roles/gateway_configure_hsm_luna/tasks/check_valid_input.yml
@@ -34,7 +34,9 @@
 
 - name: Check the partition_name exists.
   fail:
-    msg: "Please ensure the value for the partition_name variable is set and check if the syntax for partition_name is right in host_vars/luna*.placeholder.com.yml"
+    msg: >
+      "Please ensure the value for the partition_name variable is set and check if
+      the syntax for partition_name is right in host_vars/luna*.placeholder.com.yml"
   when: "hsmpartnm.msg is defined and 'undefined' in hsmpartnm.msg and 'attribute' in hsmpartnm.msg"
 
 - name: Check if the input partition password attribute is a valid one and set up the value
@@ -45,15 +47,20 @@
 
 - name: Check the partition_password exists.
   fail:
-    msg: "Please ensure the value for the partition_pass variable is set and check if the syntax for partition_pass is right in host_vars/luna*.placeholder.com.yml"
+    msg: >
+      "Please ensure the value for the partition_pass variable is set and check if the
+      syntax for partition_pass is right in host_vars/luna*.placeholder.com.yml"
   when: "hsmpartpass.msg is defined and 'undefined' in hsmpartpass.msg and 'attribute' in hsmpartpass.msg"
 
 - name: Check if the input hsm user name and password is correct for the HSM server
   register: hsmcheck
   command: sshpass -p '{{ hsm_password }}' ssh {{ ansible_ssh_extra_args }} {{ hsm_usr }}@{{ hsm_hostname }} client list
   ignore_errors: yes
+  changed_when: False
 
 - name: Check the correctness of the input hsm username and password
   fail:
-    msg: "Sorry, your username or password is incorrect. Please ensure your hsm_user and hsm_password variable in the host_vars/luna*.placeholder.com.yml file are correct"
+    msg: >
+      "Sorry, your username or password is incorrect. Please ensure your hsm_user and hsm_password variable
+      in the host_vars/luna*.placeholder.com.yml file are correct"
   when: "'Permission denied' in hsmcheck.stderr"
